5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1800_2563.log
== TEST (2019-06-06 10:25:33) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))

nm = 0
for x in vet:
	if (x < 7):
		nm = nm + 1 
print(nm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:26:13) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1)
nm = 0
for x in vet:
	if (x < 7):
		nm = nm + 1 
print(nm)
-- ERROR:
File "XXXX", line 4
    while(size(vet) > 1)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:26:19) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
nm = 0
for x in vet:
	if (x < 7):
		nm = nm + 1 
print(nm)
-- ERROR:
File "XXXX", line 5
    nm = 0
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:26:51) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for x in vet:
		if (x < 7):
			nm = nm + 1 
print(nm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:27:13) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for x in vet:
		if (x < 7):
			nm = nm + 1 
print(nm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:28:36) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i] < 7):
			nm = nm + 1 
print(nm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:29:01) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i] < 7):
			nm = nm + 1 
print(nm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:29:12) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i] < 7):
			nm = nm + 1 
	print(nm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:29:42) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i] < 7):
			nm = nm + 1 
	print(nm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:30:01) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i] < 7):
			nm = nm + 1 
	print(nm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:31:09) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:31:15) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:31:31) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:31:46) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:32:14) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:32:32) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:32:40) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:32:42) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- EXECUTION TIME:
1.14787
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
5
5
6
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
medias: 11
medias: 7
medias: 1
medias:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
medias: 5
medias: 3
medias:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:32:42) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:33:50) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i]>=5) and (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:34:08) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i]>=5) and (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:34:23) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i]>=5) and (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:34:25) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i]>=5) and (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:34:25) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i]>=5) and (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- EXECUTION TIME:
1.07666
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
medias: 11
medias: 4
medias: 1
medias:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
medias: 5
medias: 3
medias:
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:34:27) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i]>=5) and (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:34:29) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i]>=5) and (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:34:33) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i]>=5) and (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:34:33) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i]>=5) and (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:34:34) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i]>=5) and (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:34:35) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i]>=5) and (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- EXECUTION TIME:
1.17436
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
medias: 5
medias: 3
medias:
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:34:35) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i]>=5) and (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:35:44) 
-- CODE:
from numpy import *

vet = array(eval(input("medias: ")))
while(size(vet) > 1):
	nm = 0
	for i in range (size(vet)):
		if (vet[i]>=5) and (vet[i] < 7):
			nm = nm + 1 
	print(nm)
	
	vet = array(eval(input("medias: ")))
-- EXECUTION TIME:
1.03326
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
